Closed
Bug 966155
Opened 12 years ago
Closed 12 years ago
Regression: Cmd + left defect in Thunderbird since 2014-01-24
Categories
(Core :: DOM: Editor, defect)
Tracking
()
RESOLVED
FIXED
mozilla30
| Tracking | Status | |
|---|---|---|
| firefox28 | --- | unaffected |
| firefox29 | + | fixed |
| firefox30 | + | fixed |
People
(Reporter: soeren.hentzschel, Assigned: ehsan.akhgari)
References
Details
(Keywords: regression)
Attachments
(1 file)
|
3.77 KB,
patch
|
neil
:
review+
Sylvestre
:
approval-mozilla-aurora+
|
Details | Diff | Splinter Review |
I regularly use Cmd + left to jump to the beginning of the line in the message compose window of Thunderbird on OS X 10.9. But It's defect since 2014-01-24 Daily.
STR:
1. Reply to a mail
2. Type something
3. Press Cmd + left
Expected result:
cursor goes to beginning of the line
Actual result:
cursor remains on this position.
New mails are not affected, only replies. And if you click in a quoted part and then move the cursor back to your message, it works again.
Related to Bug #289384?
The fix landed on 2014-01-23, on 2014-01-23 there was no Thunderbird build, the build from 2014-01-24 was the first build with this bug.
| Assignee | ||
Comment 1•12 years ago
|
||
This is probably a dupe of bug 966552. I landed a fix for that to inbound a few hours ago. If you can still reproduce with that patch, please reopen the bug.
Status: UNCONFIRMED → RESOLVED
Closed: 12 years ago
Resolution: --- → DUPLICATE
| Reporter | ||
Comment 2•12 years ago
|
||
Hi,
I have no permissions to reopen the bug, but it's not fixed in Thunderbird. Additionally cursor up/down/left/right no longer works before clicking in the editor.
| Reporter | ||
Updated•12 years ago
|
Flags: needinfo?(ehsan)
| Assignee | ||
Comment 3•12 years ago
|
||
Sören, can you please paste the mozilla-central changeset ID that your Thunderbird build is based on? There is a link to that page from Help -> Troubleshooting Information.
Flags: needinfo?(ehsan)
| Assignee | ||
Updated•12 years ago
|
Flags: needinfo?(cadeyrn)
| Reporter | ||
Comment 4•12 years ago
|
||
Flags: needinfo?(cadeyrn)
| Assignee | ||
Comment 5•12 years ago
|
||
Hmm, so Cmd+Left used to work for you *before* bug 289384 but stopped working *after* it? That is very surprising, since that is exactly what that bug fixed... Is that when composing a plaintext email or an HTML email?
Neil, do you know what special thing Thunderbird does with its key bindings?
Status: RESOLVED → REOPENED
Ever confirmed: true
Flags: needinfo?(neil)
Resolution: DUPLICATE → ---
| Reporter | ||
Comment 6•12 years ago
|
||
I think it stopped after landing of bug 289384, I know that in works in 2014-01-22 Daily and stopped working with the 2014-01-24 Daily. And after landig of bug 966552 the cursor keys (without cmd) also stopped woking, now I have to click in the editor.
It affects both, html and plaintext mails.
Comment 7•12 years ago
|
||
Thunderbird doesn't do anything special, as far as it's concerned, compose is just a design mode document.
Interestingly those workarounds of clicking in various places suggest that focus is out of sync.
Flags: needinfo?(neil)
| Assignee | ||
Comment 8•12 years ago
|
||
OK I did a trunk build of Thunderbird and I cannot reproduce either of these problems.
Can you please try again in safe mode?
Flags: needinfo?(cadeyrn)
| Reporter | ||
Comment 9•12 years ago
|
||
same problem in safe mode. I have to click in the editor to get the keys working. But without clicking the commands are broken.
Flags: needinfo?(cadeyrn)
| Assignee | ||
Comment 10•12 years ago
|
||
OK, so we need to figure out how to reproduce this so that I can debug it. Please create a new profile, and go through all of the steps you take to hit this bug and document everything here so that I can follow your footsteps and reproduce this here. Thanks a lot!
Flags: needinfo?(cadeyrn)
Comment 11•12 years ago
|
||
Here's my STR on Linux:
1. Load the following page:
data:text/html,<input><iframe onload="contentDocument.designMode = 'on';">
2. Type some text into the design mode document
3. Click on the text field
4. Tab back into the document
5. Notice that Ctrl+Bksp no longer works
(obviously I had to pick a different keybinding here)
| Assignee | ||
Comment 12•12 years ago
|
||
OK, this I can reproduce, and I think I know what's going wrong.
Assignee: nobody → ehsan
Flags: needinfo?(cadeyrn)
| Assignee | ||
Comment 13•12 years ago
|
||
| Assignee | ||
Comment 14•12 years ago
|
||
Comment on attachment 8376877 [details] [diff] [review]
Ensure that we handle the native key bindings for all key events in designMode documents; r=Neil
This is a sibling of bug 966552 in a sense.
Attachment #8376877 -
Flags: review?(neil)
| Assignee | ||
Updated•12 years ago
|
Component: Message Compose Window → Editor
Product: Thunderbird → Core
Comment 15•12 years ago
|
||
Comment on attachment 8376877 [details] [diff] [review]
Ensure that we handle the native key bindings for all key events in designMode documents; r=Neil
(I hadn't noticed when doing the previous related reviews but the previous editor tests don't bother opening a new window, instead they just embed the design mode frame in the test document. I'm just thinking of the time it takes these tests to run, so ignore me if there's a compelling use for opening a new window.)
Attachment #8376877 -
Flags: review?(neil) → review+
| Assignee | ||
Comment 16•12 years ago
|
||
I open new windows for tests that are particularly sensitive to focus related things to make the test resilient to future changes in things in the main browser window which can change our focus assumptions. FWIW opening new windows is pretty fast, our most slowest mochitests are the ones which basically wait for a long time sitting there doing nothing.
https://hg.mozilla.org/integration/mozilla-inbound/rev/58f4e679f019
| Assignee | ||
Updated•12 years ago
|
status-firefox28:
--- → unaffected
status-firefox29:
--- → affected
status-firefox30:
--- → fixed
tracking-firefox29:
--- → ?
tracking-firefox30:
--- → ?
| Assignee | ||
Comment 17•12 years ago
|
||
Comment on attachment 8376877 [details] [diff] [review]
Ensure that we handle the native key bindings for all key events in designMode documents; r=Neil
[Approval Request Comment]
Bug caused by (feature/regressing bug #): bug 289384
User impact if declined: comment 0. Also this is pretty similar to bug 966552 and can break all sorts of things if left unfixed.
Testing completed (on m-c, etc.): locally
Risk to taking this patch (and alternatives if risky): minimal
String or IDL/UUID changes made by this patch: none
Attachment #8376877 -
Flags: approval-mozilla-aurora?
| Assignee | ||
Updated•12 years ago
|
Keywords: regression
Comment 18•12 years ago
|
||
FYI, I will wait for this patch to land in m-c before uplifting it.
Updated•12 years ago
|
Comment 19•12 years ago
|
||
Status: REOPENED → RESOLVED
Closed: 12 years ago → 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla30
| Assignee | ||
Comment 20•12 years ago
|
||
Sören, can you please verify that the Thunderbird build including this patch fixes the bug? Thanks!
Flags: needinfo?(cadeyrn)
| Assignee | ||
Comment 22•12 years ago
|
||
No, thank _you_ for reporting the bug and all of your help to guide us how to fix it! :-)
Updated•12 years ago
|
Attachment #8376877 -
Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
| Assignee | ||
Updated•12 years ago
|
Keywords: checkin-needed
Comment 23•12 years ago
|
||
Keywords: checkin-needed
You need to log in
before you can comment on or make changes to this bug.
Description
•