Bug 966155 - Ensure that we handle the native key bindings for all key events in designMode documents. r=Neil, a=sledru